# watermelon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  a  a.ll  install.sh  mygc
config/: watermelon.conf.in
examples/: 1.wm  2.wm  3.out  3.wm  4.wm  LinkList.wm  Shape.wm  Student.wm  main.wm  output  test.wm
gc/: CMakeLists.txt  Makefile
gc/include/: gc.hpp
gc/lib/: gc.ll
gc/src/: gc.cpp
immix/: CMakeLists.txt
immix/include/: allocator.hpp  block.hpp  block_flags.hpp  chunk.hpp  common.hpp  constant.hpp  line.hpp  line_flags.hpp  object.hpp
immix/src/: allocator.cpp  block.cpp  main.cpp
include/ast/: ast.hpp
include/ir/: ir.hpp
include/lexer/: lexer.hpp  token.hpp
include/opt/: ConstantFoldingPass.hpp
include/parser/: parser.hpp
include/semantic/: semantic.hpp
include/utils/: builtin.hpp  error.hpp  format.hpp  process.hpp
lib/: foo.ll  libwatermelon_opt.so.1
opt/: .gitignore  CMakeLists.txt  Makefile
opt/include/: MyPass.h  constant_prop_pass.h  cse_pass.h  dce_pass.h  local_constant_prop_pass.h  mem2reg_pass.h  trivial_dce_pass.h
opt/src/: MyPass.cpp  constant_prop_pass.cpp  cse_pass.cpp  dce_pass.cpp  local_constant_prop_pass.cpp  mem2reg_pass.cpp  trivial_dce_pass.cpp
src/: CMakeLists.txt  main.cpp  test.g4
src/ir/: gen_decls.cpp  gen_exprs.cpp  gen_stats.cpp  ir.cpp
src/lexer/: lexer.cpp  token.cpp
src/opt/: ConstantFoldingPass.cpp
src/parser/: parse_decls.cpp  parse_exprs.cpp  parse_stats.cpp  parser.cpp
src/semantic/: analyze_decls.cpp  analyze_exprs.cpp  analyze_stats.cpp  semantic.cpp
src/util/: process.cpp
std/: CMakeLists.txt  io.ll  io.wm  object.wm  print.ll  print.wm  utils.ll  utils.wm
std/array/: array.wm  mem.ll  mem.wm
std/builtin/: object.wm  range.wm  string.wm
std/io/: io.wm
std/utils/: utils.ll  utils.wm
